# conics

./: README.md  conics.cabal
src/main/: Conic.hs  Conics.hs  Main.hs  Util.hs
