name:           conics
version:        0.0.1
synopsis:       Visualize conic sections
category:       Game
copyright:      Mate J Kovacs, 2014
stability:      alpha
tested-with:    GHC == 7.8.2
build-type:     Simple
cabal-version:  >=1.2

executable conics
    ghc-options:    -Wall
    hs-source-dirs: src/main
    main-is:        Main.hs
    other-modules:  Conics
    build-depends:  base
                  , gloss ==1.8.*
                  , gloss-raster ==1.8.*
