name:           conics
version:        0.0.1
synopsis:       A study of conic sections and quadratic rational Bézier curves
category:       Demo
copyright:      Máté J Kovács, 2014
stability:      alpha
tested-with:    GHC == 7.8.2
build-type:     Simple
cabal-version:  >=1.2

executable conics
    ghc-options:    -Wall
    hs-source-dirs: src/main
    main-is:        Main.hs
    other-modules:  Conic, Util
    build-depends:  base
                  , gloss ==1.9.*
